2009-07-10  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: #NB121519 A blank frame like window with out any title is shown
	                 on the desktop.

        * src/mb/hd-comp-mgr.c: Adding the window to the task switcher when 
	it is removed from a stack and it is no more a stacked window.

2009-07-08  Aapo Kojo <aapo.kojo@nokia.com>

	Release 2.2.62

2009-07-08  Laszlo Pere  <lpere@blumsoft.eu>

	NB#125920 [REGF]Device is unlocked without lock code from active call
	          in Layout mode

	* src/home/hd-home.c: Not closing dialogs above the stacking layer 0
	  when going back from layout mode, thus not closing the 'Enter lock
	  code' dialog.

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#121351 task switcher maximises applications instead of just panning

	* src/home/hd-task-navigator.c (within_grid):
	  we calculated the top of the grid incorrectly, didn't take
	  panning into account

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#125361 Incoming call Dialog:Reject Button is Not shown
		  in certain scenario

	* src/home/hd-task-navigator.c (hd_task_navigator_replace_window):
	  Remember the replaced windows, grab them and hide them when the
	  navigator is activated...
	* src/home/hd-render-manager.c (hd_render_manager_set_visibilities):
	  ...so hdrm needn't worry about hiding them itself.

	The problem was that when the incoming call dialog was mapped and
	hdrm sorted out the visibilities, it decided to hide the dialog,
	because we were in tasw view.  Since the dialog was hidden,
	the hd_comp_mgr_should_be_in_portrait() ignored it.

	The problem wouldn't have been apparent with non-fullscreen dialogs
	or with normal application windows.  Only the damned incoming call
	dialog.

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#126456 launcher transitions are not fast enough.

	* data/transitions.ini:
	  launcher_in -> 500ms, launcher_in_sub -> 500ms
	  Requested by the ***************** product management.
	  (no offense)
